man-db (2.4.2-18) UNRELEASED; urgency=low

  * Update debconf translations:
    - Dutch (thanks, cobaco; closes: #260294).

 -- Colin Watson <cjwatson@debian.org>  Tue, 20 Jul 2004 01:27:34 +0100

man-db (2.4.2-17) unstable; urgency=low

  * debian/postinst, debian/postrm: Replace XSIish uses of 'test' with more
    portable code (thanks, David Weinehall; see #256279).
  * Synchronize logic for whether to ask build-database or rebuild-database
    between config and postinst (closes: #246545).
  * Don't fail to configure if mandb doesn't create any databases for
    whatever reason when running in the foreground (closes: #252425).
  * Policy version 3.6.1: no changes required.

 -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jun 2004 11:48:02 +0100

man-db (2.4.2-16) unstable; urgency=low

  * Update debconf translations:
    - Spanish (thanks, Carlos Valdivia Yagüe; closes: #247829).

 -- Colin Watson <cjwatson@debian.org>  Thu, 13 May 2004 19:19:53 +0100

man-db (2.4.2-15) unstable; urgency=medium

  * Add debconf translations:
    - Czech (thanks, Miroslav Kure; closes: #244422).
    - Polish (thanks, Robert Luberda; closes: #245056).
  * Update debconf translations:
    - German (thanks, Florian Ernst; closes: #244532).

 -- Colin Watson <cjwatson@debian.org>  Fri, 23 Apr 2004 01:30:38 +0100

man-db (2.4.2-14) unstable; urgency=low

  * Add Turkish debconf translation (thanks, Recai Oktas and Mehmet Turker;
    closes: #239143).

 -- Colin Watson <cjwatson@debian.org>  Tue, 23 Mar 2004 20:14:20 +0000

man-db (2.4.2-13) unstable; urgency=medium

  * When sorting located man pages for display, sort by pure section, then
    id (real page, symlink, whatis reference, etc.), then extended section,
    rather than the previous ordering of extended section then id. This
    works around the worst effects of #204249, in which changing a
    cross-hierarchy man page alternative can cause man to get the display
    order wrong.
