@@ -465,10 +465,6 @@ static int apropos (char *page, char *lowpage)
 	datum key, cont;
 	int found = 0;
 
-#ifndef APROPOS
-	lowpage = lowpage; /* not used in whatis */
-#endif
-
 #ifndef BTREE
 	datum nextkey;
 
@@ -545,6 +541,10 @@ static int apropos (char *page, char *lowpage)
 		end = btree_nextkeydata (dbf, &key, &cont);
 #endif /* !BTREE */
 	}
+
+#ifndef APROPOS
+	lowpage = lowpage; /* not used in whatis */
+#endif
 
 	return found;
 }
